--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -50,5 +50,6 @@
 /* Adjust main content area to use more space */
 .archive {
     margin-left: 0px !important;
+    margin-right: -200px !important;
     padding-left: 200px !important;
 }
