--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -51,5 +51,6 @@
 .archive {
     margin-left: -160px !important;
     margin-right: -160px !important;
-    padding-left: 20px !important;
 }
+
+/*padding-left: 20px !important;*/
