--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -49,8 +49,8 @@
 
 /* Adjust main content area to use more space */
 .archive {
-    margin-left: -260px !important;
+    padding-left: 100px !important;
     margin-right: -160px !important;
 }
 
-/*padding-left: 20px !important;*/
+/* margin-left: -260px !important;/
