--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -50,6 +50,7 @@
 /* Adjust main content area to use more space */
 .archive {
     padding-left: 0px !important;
+    margin-left: -80px !important;    /* Moves content left */
     margin-right: -160px !important;
 }
 
